Завершает верстку сеток

--- a/index.html
+++ b/index.html
@@ -168,35 +168,37 @@
     <section class="seo">
       <h2 class="visually-hidden">Секция SEO</h2>
       <div class="container">
-        <p class="seo-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
-          собственного производства на развес</p>
-        <ul class="seo-features-list">
-          <li class="feature-item">
-            <img src="img/icecream-icon.svg" width="49" height="49" alt="">
-            <p class="feature-description">Все наше мороженое изготавливается
-              на собственном производстве, с использованием современного оборудования
-              и проверенных временем технологий.</p>
-          </li>
-          <li class="feature-item">
-            <img src="img/cow-icon.svg" width="49" height="49" alt="">
-            <p class="feature-description">Для приготовления мороженого используются
-              настоящие сливки и молоко высочайшего качества. Все дополнительные
-              ингредиенты и добавки произведены из натурального, экологически
-              чистого сырья.</p>
-          </li>
-          <li class="feature-item">
-            <img src="img/leaf-icon.svg" width="49" height="49" alt="">
-            <p class="feature-description">Закупка ингредиентов производится только
-              у проверенных фермерских хозяйств и компаний, с которыми нас связывает
-              долговременное сотрудничество.</p>
-          </li>
-          <li class="feature-item">
-            <img src="img/thermo-icon.svg" width="49" height="49" alt="">
-            <p class="feature-description">Доставка нашего мороженого до заказчиков
-              осуществляется в специальном термопаке, который не дает мороженому
-              растаять в пути и позволяет сохранить превосходный вкус.</p>
-          </li>
-        </ul>
+        <div class="seo-wrapper">
+          <p class="seo-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
+            собственного производства на развес</p>
+          <ul class="seo-features-list">
+            <li class="feature-item">
+              <img class="seo-feature-icon" src="img/icecream-icon.svg" width="49" height="49" alt="">
+              <p class="feature-description">Все наше мороженое изготавливается
+                на собственном производстве, с использованием современного оборудования
+                и проверенных временем технологий.</p>
+            </li>
+            <li class="feature-item">
+              <img class="seo-feature-icon" src="img/cow-icon.svg" width="49" height="49" alt="">
+              <p class="feature-description">Для приготовления мороженого используются
+                настоящие сливки и молоко высочайшего качества. Все дополнительные
+                ингредиенты и добавки произведены из натурального, экологически
+                чистого сырья.</p>
+            </li>
+            <li class="feature-item">
+              <img class="seo-feature-icon" src="img/leaf-icon.svg" width="49" height="49" alt="">
+              <p class="feature-description">Закупка ингредиентов производится только
+                у проверенных фермерских хозяйств и компаний, с которыми нас связывает
+                долговременное сотрудничество.</p>
+            </li>
+            <li class="feature-item">
+              <img class="seo-feature-icon" src="img/thermo-icon.svg" width="49" height="49" alt="">
+              <p class="feature-description">Доставка нашего мороженого до заказчиков
+                осуществляется в специальном термопаке, который не дает мороженому
+                растаять в пути и позволяет сохранить превосходный вкус.</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <section class="blog-mailing">
@@ -228,11 +230,11 @@
     <section class="contacts">
       <h2 class="visually-hidden">Секция контактов</h2>
       <div class="map"></div>
-      <div class="container">
+      <div class="container business-card-aligner">
         <div class="business-card">
           <p class="card-adresstext">Адрес главного офиса
             и офлайн-магазина:</p>
-          <p class="card-adress">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+          <p class="card-adress">ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</p>
           <p class="card-teltext">Для заказов по телефону:</p>
           <a class="card-tel" href="tel:8-812-450-25-25">8 812 450-25-25</a>
           <p class="card-schedule">(с 10 до 20 ежедневно)</p>
