--- a/catalog.html
+++ b/catalog.html
@@ -18,13 +18,13 @@
           <img src="img/logo.png" width="154" height="64" alt="Глейси">
         </a>
         <ul class="site-navigation">
-          <li class="navigation-item"><a href="#">Каталог</a>
+          <li class="navigation-item navigation-item-current catalog" onclick="myFunction()"><a href="#">Каталог</a>
             <ul class="catalog-list">
               <li class="catalog-list-item">
                 <a class="" href="#">Новинки</a>
               </li>
               <li class="divider"></li>
-              <li class="catalog-list-item">
+              <li class="catalog-list-item-current">
                 <a class="" href="catalog.html">Сливочное</a>
               </li>
               <li class="catalog-list-item">
@@ -42,9 +42,13 @@
           <li class="navigation-item"><a href="company.html">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="navigation-item"><a href="#">Поиск</a>
-            <input class="search-bar" type="text" name="search" value="" placeholder="Что ищем?">
-          </li class="navigation-item">
+          <li class="navigation-item search"><a class="visually-hidden" href="#">Поиск</a>
+            <img class="search-icon" src="img/search-icon.svg" width="17" height="17" alt="">
+            <img class="search-icon-hover" src="img/search-icon-hover.svg" width="17" height="17" alt="">
+            <div class="search-bar">
+              <input class="search-bar-input" type="text" name="search" value="" placeholder="Что ищем?">
+            </div>
+          </li>
           <li class="navigation-item"><a href="#">Вход</a>
             <form class="sign-form" action="https://echo.htmlacademy.ru" method="post">
               <input class="sign-form-email" type="text" name="email" value="" placeholder="Электронная почта">
@@ -297,26 +301,26 @@
     </section>
     <div class="pagination">
       <div class="container">
-          <ul class="pagination-list">
-            <li class="pagination-cover">
-              <a class="pagination-item pagination-item-current" href="#" aria-label="Текущая страница">1</a>
-            </li>
-            <li class="pagination-cover">
-              <a class="pagination-item" href="#" aria-label="Перейти на вторую страницу">2</a>
-            </li>
-            <li class="pagination-cover">
-              <a class="pagination-item" href="#" aria-label="Перейти на третью страницу">3</a>
-            </li>
-            <li class="pagination-cover">
-              <a class="pagination-item" href="#" aria-label="Перейти на четвертую страницу">4</a>
-            </li>
-            <li class="pagination-cover">
-              <a class="pagination-item" href="#" aria-label="Перейти на пятую страницу">5</a>
-            </li>
-            <li class="pagination-cover">
-              <a class="pagination-item" href="#" aria-label="Перейти на следующую страницу">Следующая</a>
-            </li>
-          </ul>
+        <ul class="pagination-list">
+          <li class="pagination-cover">
+            <a class="pagination-item pagination-item-current" href="#" aria-label="Текущая страница">1</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на вторую страницу">2</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на третью страницу">3</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на четвертую страницу">4</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на пятую страницу">5</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на следующую страницу">Следующая</a>
+          </li>
+        </ul>
       </div>
     </div>
   </main>
@@ -387,6 +391,7 @@
       </form>
     </div>
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
