--- a/catalog.html
+++ b/catalog.html
@@ -49,17 +49,17 @@
               <input class="search-bar-input" type="text" name="search" value="" placeholder="Что ищем?">
             </div>
           </li>
-          <li class="navigation-item"><a href="#">Вход</a>
+          <li class="navigation-item sign-in"><a class="sign-in-text" href="#">Вход</a>
             <form class="sign-form" action="https://echo.htmlacademy.ru" method="post">
-              <input class="sign-form-email" type="text" name="email" value="" placeholder="Электронная почта">
-              <input class="sign-form-password" type="text" name="password" value="" placeholder="Пароль">
-              <button class="button writeus-button" type="submit">
-                <span class="button-text">Войти</span></button>
+              <input class="sign-form-email input-default" type="text" name="email" value="" placeholder="Электронная почта">
+              <input class="sign-form-password input-default" type="text" name="password" value="" placeholder="Пароль">
+              <a class="button writeus-button" href="#">
+                <span class="button-text">Войти</span></a>
               <a class="sign-form-link" href="#">Забыли пароль?</a>
               <a class="sign-form-link" href="#">Новая регистрация</a>
             </form>
           </li>
-          <li class="navigation-item"><a class="full" href="basket.html">2 товара</a>
+          <li class="navigation-item basket full-basket"><a class="full" href="basket.html">2 товара</a>
             <div class="basket-full">
               <ul class="basket-list">
                 <li class="basket-list-item">
@@ -353,10 +353,10 @@
         </li>
       </ul>
       <ul class="menu">
-        <li class="menu-item">Для поставщиков</li>
-        <li class="menu-item">О производстве</li>
-        <li class="menu-item">Наши документы</li>
-        <li class="menu-item">Экологические стандарты</li>
+        <li class="menu-item"><a class="link-default" href="#">Для поставщиков</a></li>
+        <li class="menu-item"><a class="link-default" href="#">О производстве</a></li>
+        <li class="menu-item"><a class="link-default" href="#">Наши документы</a></li>
+        <li class="menu-item"><a class="link-default" href="#">Экологические стандарты</a></li>
       </ul>
       <div class="made-in">
         <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
@@ -376,15 +376,15 @@
       </div>
       <form class="writeus-form" action="https://echo.htmlacademy.ru" method="post">
         <p class="writeus-item">
-          <input id="writeus-name" class="writeus-item-input" type="text" name="name" value=""
+          <input id="writeus-name" class="writeus-item-input input-default" type="text" name="name" value=""
             placeholder="Как вас зовут?">
         </p>
         <p class="writeus-item">
-          <input id="writeus-email" class="writeus-item-input" type="text" name="email" value=""
+          <input id="writeus-email" class="writeus-item-input input-default" type="email" name="email" value=""
             placeholder="Ваша почта для ответа?">
         </p>
         <p class="writeus-item">
-          <input id="writeus-emailtext" class="writeus-item-input" type="text" name="email-text" value=""
+          <input id="writeus-emailtext" class="writeus-item-input input-default" type="text" name="email-text" value=""
             placeholder="Напишите что-нибудь...">
         </p>
         <button class="button writeus-button" type="submit"><span class="button-text">Отправить</span></button>
