Добавляет состояние карточки товара при наведении

--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,8 @@
           </li>
           <li class="navigation-item sign-in"><a class="sign-in-text" href="#">Вход</a>
             <form class="sign-form" action="https://echo.htmlacademy.ru" method="post">
-              <input class="sign-form-email input-default" type="text" name="email" value="" placeholder="Электронная почта">
+              <input class="sign-form-email input-default" type="text" name="email" value=""
+                placeholder="Электронная почта">
               <input class="sign-form-password input-default" type="text" name="password" value="" placeholder="Пароль">
               <a class="button writeus-button" href="#">
                 <span class="button-text">Войти</span></a>
@@ -218,6 +219,9 @@
             </div>
             <p class="hit-text">Сливочное с апельсиновым джемом и
               цитрусовой стружкой</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-2.jpg" width="267" height="267" alt="">
@@ -225,6 +229,9 @@
               <p class="hit-price">380<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочно-кофейное с кусочками шоколада</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-3.jpg" width="267" height="267" alt="">
@@ -232,6 +239,9 @@
               <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочно-клубничное с присыпкой из белого шоколада</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-4.jpg" width="267" height="267" alt="">
@@ -239,6 +249,9 @@
               <p class="hit-price">415<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочное крем-брюле с карамельной подливкой</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-5.jpg" width="267" height="267" alt="">
@@ -246,6 +259,9 @@
               <p class="hit-price">325<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочное с брусничным джемом</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-6.jpg" width="267" height="267" alt="">
@@ -253,6 +269,9 @@
               <p class="hit-price">410<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочно-черничное с цельными ягодами черники</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-7.jpg" width="267" height="267" alt="">
@@ -260,6 +279,9 @@
               <p class="hit-price">375<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочно-лимонное с карамельной присыпкой</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-8.jpg" width="267" height="267" alt="">
@@ -267,6 +289,9 @@
               <p class="hit-price">320<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочное с шоколадной стружкой</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-9.jpg" width="267" height="267" alt="">
@@ -274,6 +299,9 @@
               <p class="hit-price">440<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочно-ванильное с кусочками шоколада</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-10.jpg" width="267" height="267" alt="">
@@ -281,6 +309,9 @@
               <p class="hit-price">435<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочноe с ментоловым сиропом </p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-11.jpg" width="267" height="267" alt="">
@@ -288,6 +319,9 @@
               <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочное с кусочками черного шоколада</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="good-item">
             <img class="icecream-image" src="img/icecream-12.jpg" width="267" height="267" alt="">
@@ -295,6 +329,9 @@
               <p class="hit-price">420<span class="hit-price-icon">₽/кг</span></p>
             </div>
             <p class="hit-text">Сливочное с мятным сиропом</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
         </ul>
       </div>
