--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
           </li>
           <li class="navigation-item sign-in"><a class="sign-in-text" href="#">Вход</a>
             <form class="sign-form" action="https://echo.htmlacademy.ru" method="post">
-              <input class="sign-form-email input-default" type="email" name="email" value="" placeholder="Электронная почта">
-              <input class="sign-form-password input-default" type="password" name="password" value="" placeholder="Пароль">
-              <a class="button writeus-button" href="#">
-                <span class="button-text">Войти</span></a>
-              <a class="sign-form-link" href="#">Забыли пароль?</a>
-              <a class="sign-form-link" href="#">Новая регистрация</a>
+              <input class="sign-form-email input-default" type="email" name="email" value=""
+                placeholder="Электронная почта">
+              <input class="sign-form-password input-default" type="password" name="password" value=""
+                placeholder="Пароль">
+              <div class="sign-form-container">
+                <a class="button writeus-button" href="#">
+                  <span class="button-text">Войти</span></a>
+                <div class="sign-link-wrapper">
+                  <a class="sign-form-link" href="#">Забыли пароль?</a>
+                  <a class="sign-form-link" href="#">Новая регистрация</a>
+                </div>
+              </div>
             </form>
           </li>
           <li class="navigation-item basket"><a href="basket.html">Пусто</a>
@@ -224,7 +230,7 @@
             </p>
             <form class="mailing-signup">
               <label for="mailing-email"></label>
-              <input id="mailing-email input-default" class="mailing-signup-input" type="email" name="email"
+              <input id="mailing-email" class="mailing-signup-input input-default" type="email" name="email"
                 placeholder="Электронная почта">
               <button class="button mailing-button">Отправить</button>
             </form>
