--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
       <div class="container">
         <div class="modal-title-wrapper">
           <h2 class="modal-title">Мы обязательно вам ответим!</h2>
-          <button class="modal-close" type="button" aria-label="Закрыть форму обратной связи">
+          <button class="modal-close" type="button" aria-label="Закрыть форму обратной связи"
+          onclick="modalClose()">
             <img src="img/close-cross.svg" width="18" height="17" alt="">
           </button>
         </div>
