Добавляет стилизацию выпадающего меню полной корзины

--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
               <input class="sign-form-password input-default" type="password" name="password" value=""
                 placeholder="Пароль">
               <div class="sign-form-container">
-                <a class="button writeus-button" href="#">
+                <a class="button sign-in-button" href="#">
                   <span class="button-text">Войти</span></a>
                 <div class="sign-link-wrapper">
                   <a class="sign-form-link" href="#">Забыли пароль?</a>
@@ -65,18 +65,20 @@
               </div>
             </form>
           </li>
-          <li class="navigation-item basket full-basket"><a class="full" href="basket.html">2 товара</a>
-            <div class="basket-full">
+          <li class="navigation-item basket full-basket"><a class="basket-link-full" href="basket.html">2 товара</a>
+            <div class="basket-full-form">
               <ul class="basket-list">
                 <li class="basket-list-item">
-                  <img class="basket-item-small" src="img/icecream-1-small.jpg" alt="">
+                  <img class="basket-item-small" src="img/icecream-1-small.png"
+                  width="33" height="33" alt="">
                   <p class="basket-item-description">Пломбир с апельсиновым джемом</p>
                   <p class="basket-item-kg">1,5 кг х
                     <span class="price-per-kg">200 руб.</span></p>
                   <p class="item-total-price">300 руб.</p>
                 </li>
                 <li class="basket-list-item">
-                  <img class="basket-item-small" src="img/icecream-2-small.jpg" alt="">
+                  <img class="basket-item-small" src="img/icecream-2-small.png"
+                  width="33" height="33" alt="">
                   <p class="basket-item-description">Клубничный пломбир с присыпкой
                     из белого шоколада</p>
                   <p class="basket-item-kg">1,5 кг х
@@ -84,10 +86,9 @@
                   <p class="item-total-price">450 руб.</p>
                 </li>
               </ul>
-              <div class="divider"></div>
               <p class="basket-price-total">Итого: <span>750 руб.</span></p>
-              <button class="button writeus-button" type="submit">
-                <span class="button-text">Отправить</span></button>
+              <a class="button basket-button">
+                <span class="button-text">Оформить заказ</span></a>
             </div>
           </li>
         </ul>
