--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <input class="sign-form-password input-default" type="password" name="password" value=""
                 placeholder="Пароль">
               <div class="sign-form-container">
-                <a class="button writeus-button" href="#">
+                <a class="button sign-in-button" href="#">
                   <span class="button-text">Войти</span></a>
                 <div class="sign-link-wrapper">
                   <a class="sign-form-link" href="#">Забыли пароль?</a>
@@ -65,7 +65,7 @@
               </div>
             </form>
           </li>
-          <li class="navigation-item basket"><a href="basket.html">Пусто</a>
+          <li class="navigation-item basket"><a class="basket-link-empty" href="basket.html">Пусто</a>
           </li>
         </ul>
       </nav>
